fixed community posts header and search box responsive based on iphones

--- a/src/components/components-posts/community-post-search-box/community-post-search-box.scss
+++ b/src/components/components-posts/community-post-search-box/community-post-search-box.scss
@@ -30,10 +30,21 @@
 }
 
 @media (max-width: 744px) {
-  .search-input-container {
+  .community-post-search-box-container {
     position: absolute;
     top: 1175px;
     right: 30px;
     z-index: 100;
+  }
+}
+
+// mobile (based on iphones)
+@media (max-width: 430px) {
+  .community-post-search-box-container {
+    top: 1150px;
+  }
+
+  .community-post-search-box-input {
+    width: 240px !important;
   }
 }
